--- a/indext.html
+++ b/indext.html
@@ -24,44 +24,31 @@
     .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
     .navbar .icon { flex: 1; text-align: right; }
 
-    /* Project description text */
-    .project-text {
-      text-align: center;
-      margin: 15px 0;
+    /* Project description / marquee */
+    .marquee-container {
+      width: 100%;
+      overflow: hidden;
+      background: #222;
+      color: #fff;
       font-size: 22px;
-      font-weight: bold;
-      color: #111;
-      cursor: pointer;
-      transition: color 0.5s ease;
+      padding: 10px 0;
+      position: relative;
     }
-    .project-text:hover { color: #e63946; }
+    .marquee {
+      display: inline-block;
+      white-space: nowrap;
+      animation: marquee 15s linear infinite;
+    }
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
 
     /* Banner Slider */
     .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
-    .banner-slider input[type="file"] { position: absolute; top: 10px; left: 50%; transform: translateX(-50%); z-index: 4; }
     .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
     .slide.active { opacity: 1; z-index: 2; }
     .slide img { width: 100%; height: 100%; object-fit: cover; }
-    .slide-text {
-      position: absolute;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      color: #fff;
-      font-size: 24px;
-      font-weight: bold;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
-      opacity: 0;
-      transition: all 1s ease-in-out;
-    }
-    .slide.active .slide-text { opacity: 1; }
-    .slide-left { transform: translateX(-100%) translateY(0); }
-    .slide.active .slide-left { transform: translateX(-50%) translateY(0); }
-    .slide-right { transform: translateX(100%) translateY(0); }
-    .slide.active .slide-right { transform: translateX(-50%) translateY(0); }
-    .slide-zoom { transform: translateX(-50%) scale(0.5); }
-    .slide.active .slide-zoom { transform: translateX(-50%) scale(1); }
-
     .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
     .prev { left: 10px; }
     .next { right: 10px; }
@@ -77,6 +64,10 @@
     button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; }
     #webcam-container, #label-container { margin: 15px auto; }
 
+    /* Static images section */
+    .static-images { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom:30px; }
+    .static-images img { width: 300px; height: 200px; object-fit: cover; border-radius: 10px; }
+
     /* Responsive */
     @media(max-width:768px){
       .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
@@ -84,7 +75,8 @@
       section.hero p { font-size: 16px; }
       .slide-text { font-size: 18px; }
       button#startBtn { font-size: 16px; }
-      .project-text { font-size: 18px; }
+      .marquee-container { font-size: 18px; }
+      .static-images img { width: 90%; height: auto; }
     }
   </style>
 </head>
@@ -101,12 +93,23 @@
     <div class="icon">🎬</div>
   </nav>
 
-  <!-- Project Description -->
-  <div class="project-text" id="projectText">Ageflix recommends movies based on your age</div>
+  <!-- Marquee / Moving Text -->
+  <div class="marquee-container">
+    <div class="marquee" id="marqueeText"></div>
+  </div>
 
   <!-- Banner Slider -->
-  <section class="banner-slider">
-    <input type="file" id="bannerUpload" multiple accept="image/*">
+  <section class="banner-slider" id="bannerSlider">
+    <div class="slide active">
+      <img src="https://picsum.photos/id/1018/1200/400" alt="Banner 1">
+    </div>
+    <div class="slide">
+      <img src="https://picsum.photos/id/1025/1200/400" alt="Banner 2">
+    </div>
+    <div class="slide">
+      <img src="https://picsum.photos/id/1039/1200/400" alt="Banner 3">
+    </div>
+
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
     <div class="dots"></div>
@@ -121,6 +124,13 @@
     <div id="label-container"></div>
 
     <button id="startBtn">Start Camera & Detect Age</button>
+  </section>
+
+  <!-- Static Images Section -->
+  <section class="static-images">
+    <img src="https://picsum.photos/id/1045/400/300" alt="Static 1">
+    <img src="https://picsum.photos/id/1049/400/300" alt="Static 2">
+    <img src="https://picsum.photos/id/1052/400/300" alt="Static 3">
   </section>
 
   <!-- Scripts -->
@@ -170,70 +180,56 @@
 
     document.getElementById("startBtn").addEventListener("click", init);
 
-    // Banner Slider with Upload
-    const slider = document.querySelector('.banner-slider');
-    const uploadInput = document.getElementById('bannerUpload');
-    let banners = [];
+    // Banner Slider JS
+    const slides = document.querySelectorAll('.slide');
+    const prev = document.querySelector('.prev');
+    const next = document.querySelector('.next');
+    const dotsContainer = document.querySelector('.dots');
     let slideIndex = 0;
 
-    function createSlide(src, text='Your Banner Text', animation='slide-left', isActive=false){
-      const slide = document.createElement('div');
-      slide.classList.add('slide', animation);
-      if(isActive) slide.classList.add('active');
+    function showSlide(index){
+      if(index < 0) slideIndex = slides.length-1;
+      else if(index >= slides.length) slideIndex = 0;
+      else slideIndex = index;
 
-      const img = document.createElement('img');
-      img.src = src;
+      slides.forEach((s,i)=>{
+        s.classList.remove('active');
+        if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
+      });
+      slides[slideIndex].classList.add('active');
+      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
+    }
 
-      const slideText = document.createElement('div');
-      slideText.classList.add('slide-text', animation);
-      slideText.innerText = text;
+    prev.addEventListener('click', ()=> showSlide(slideIndex-1));
+    next.addEventListener('click', ()=> showSlide(slideIndex+1));
 
-      slide.appendChild(img);
-      slide.appendChild(slideText);
-      slider.appendChild(slide);
-
+    // Dots
+    slides.forEach((_,i)=>{
       const dot = document.createElement('span');
       dot.classList.add('dot');
-      if(isActive) dot.classList.add('active');
-      dot.addEventListener('click', () => showSlide(banners.indexOf(slide)));
-      slider.querySelector('.dots').appendChild(dot);
-
-      banners.push(slide);
-    }
-
-    function showSlide(index){
-      slideIndex = index < 0 ? banners.length-1 : index >= banners.length ? 0 : index;
-      banners.forEach((s,i)=>{
-        s.classList.remove('active');
-        slider.querySelectorAll('.dot')[i].classList.remove('active');
-      });
-      banners[slideIndex].classList.add('active');
-      slider.querySelectorAll('.dot')[slideIndex].classList.add('active');
-    }
-
-    document.querySelector('.prev').addEventListener('click',()=>showSlide(slideIndex-1));
-    document.querySelector('.next').addEventListener('click',()=>showSlide(slideIndex+1));
-
-    uploadInput.addEventListener('change', (e)=>{
-      Array.from(e.target.files).forEach(file=>{
-        const reader = new FileReader();
-        reader.onload = () => createSlide(reader.result, 'Ageflix recommends movies based on your age');
-        reader.readAsDataURL(file);
-      });
+      if(i===0) dot.classList.add('active');
+      dot.addEventListener('click', ()=>showSlide(i));
+      dotsContainer.appendChild(dot);
     });
 
-    // Project Text Click Change
-    const projectTexts = [
+    // Marquee / Moving Text
+    const marqueeTextElem = document.getElementById('marqueeText');
+    const marqueeMessages = [
       "Ageflix recommends movies based on your age",
       "Find the perfect movie for kids, adults, and seniors",
       "Your personalized movie guide!",
-      "Discover films suitable for your age"
+      "Discover films suitable for your age",
+      "Enjoy movies safely with Ageflix"
     ];
-    const projectTextElem = document.getElementById('projectText');
-    projectTextElem.addEventListener('click', ()=>{
-      const current = projectTexts.indexOf(projectTextElem.innerText);
-      projectTextElem.innerText = projectTexts[(current+1)%projectTexts.length];
-    });
+    let marqueeIndex = 0;
+
+    function updateMarquee(){
+      marqueeTextElem.innerText = marqueeMessages[marqueeIndex];
+      marqueeIndex = (marqueeIndex+1) % marqueeMessages.length;
+    }
+
+    setInterval(updateMarquee, 5000); // Change text every 5 seconds
+    updateMarquee();
   </script>
 
 </body>
