--- a/indext.html
+++ b/indext.html
@@ -1,15 +1,3 @@
-تمام! سأجمع لك **الصفحة كاملة** حسب طلبك:
-
-* اسم **Ageflix باللون الأحمر** على اليمين.
-* القائمة **في الوسط** (About, Movies).
-* نص متحرك (News-ticker style) عن فكرة المشروع أسفل الهيدر.
-* كاميرا للتعرف على العمر بدون صور إضافية أسفلها.
-* عند التعرف على العمر يظهر **alert** (Kid, Adult, Senior) ثم **Fade Out + Zoom** قبل الانتقال للصفحة المناسبة.
-* متوافق مع الجوال.
-
-إليك الكود الكامل:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,129 +5,140 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ageflix - Home</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      overflow-x: hidden;
-      background: #111;
-      color: #fff;
-    }
+    * { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
+    body { background: #f0f0f0; }
 
     /* Navbar */
-    .navbar {
+    nav.navbar {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 15px 20px;
-      background: #222;
+      justify-content: space-between;
+      background-color: #111;
+      color: #fff;
+      padding: 10px 20px;
       flex-wrap: wrap;
     }
+    .navbar .logo { font-size: 24px; font-weight: bold; flex: 1; color: red; }
+    .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
+    .navbar ul li { margin: 0 15px; }
+    .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
+    .navbar .icon { flex: 1; text-align: right; }
 
-    .logo {
-      font-size: 28px;
-      font-weight: bold;
-      color: red;
-    }
-
-    .nav-links {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
-    .nav-links a {
-      color: white;
-      text-decoration: none;
-      font-size: 18px;
-      transition: 0.3s;
-    }
-
-    .nav-links a:hover {
-      color: red;
-    }
-
-    /* News ticker */
-    .news-ticker {
+    /* Project description / marquee */
+    .marquee-container {
       width: 100%;
-      background: #333;
-      white-space: nowrap;
       overflow: hidden;
-      box-sizing: border-box;
+      background: #222;
+      color: #fff;
+      font-size: 22px;
       padding: 10px 0;
-      font-size: 18px;
-      color: yellow;
       position: relative;
     }
-
-    .news-ticker span {
+    .marquee {
       display: inline-block;
-      padding-left: 100%;
-      animation: ticker 15s linear infinite;
+      white-space: nowrap;
+      animation: marquee 15s linear infinite;
     }
-
-    @keyframes ticker {
-      0% { transform: translateX(0); }
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
       100% { transform: translateX(-100%); }
     }
 
-    /* Hero section */
-    .hero {
-      text-align: center;
-      padding: 40px 20px;
-    }
+    /* Banner Slider */
+    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
+    .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
+    .slide.active { opacity: 1; z-index: 2; }
+    .slide img { width: 100%; height: 100%; object-fit: cover; }
+    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
+    .prev { left: 10px; }
+    .next { right: 10px; }
 
-    #webcam-container {
-      margin: 20px auto;
-      width: 320px;
-      max-width: 100%;
-    }
+    .dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
+    .dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
+    .dot.active { background-color: #fff; }
 
-    #label-container p {
-      margin: 5px 0;
-    }
+    /* Hero / Webcam */
+    section.hero { text-align: center; padding: 20px; }
+    section.hero h1 { font-size: 32px; margin-bottom: 10px; }
+    section.hero p { font-size: 20px; margin-bottom: 20px; }
+    button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; }
+    #webcam-container, #label-container { margin: 15px auto; }
+
+    /* Static images section */
+    .static-images { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom:30px; }
+    .static-images img { width: 300px; height: 200px; object-fit: cover; border-radius: 10px; }
 
     /* Responsive */
-    @media (max-width: 768px) {
-      .nav-links {
-        justify-content: center;
-        gap: 15px;
-      }
+    @media(max-width:768px){
+      .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
+      section.hero h1 { font-size: 24px; }
+      section.hero p { font-size: 16px; }
+      .slide-text { font-size: 18px; }
+      button#startBtn { font-size: 16px; }
+      .marquee-container { font-size: 18px; }
+      .static-images img { width: 90%; height: auto; }
     }
   </style>
 </head>
 <body>
+
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">Ageflix</div>
-    <div class="nav-links">
-      <a href="about.html">About</a>
-      <a href="movies.html">Movies</a>
-      <a href="contact.html">Contact</a>
-    </div>
+    <ul>
+      <li><a href="about.html">About</a></li>
+      <li><a href="movies.html">Movies</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <div class="icon">🎬</div>
   </nav>
 
-  <!-- News Ticker -->
-  <div class="news-ticker">
-    <span id="ticker-text">Welcome to Ageflix! We suggest movies based on your age group! | Fun for Kids, Adults & Seniors! | Enjoy personalized movie recommendations!</span>
+  <!-- Marquee / Moving Text -->
+  <div class="marquee-container">
+    <div class="marquee" id="marqueeText"></div>
   </div>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Discover Movies by Your Age!</h1>
-    <p>Camera will detect your age and suggest the best movies for you.</p>
+  <!-- Banner Slider -->
+  <section class="banner-slider" id="bannerSlider">
+    <div class="slide active">
+      <img src="https://picsum.photos/id/1018/1200/400" alt="Banner 1">
+    </div>
+    <div class="slide">
+      <img src="https://picsum.photos/id/1025/1200/400" alt="Banner 2">
+    </div>
+    <div class="slide">
+      <img src="https://picsum.photos/id/1039/1200/400" alt="Banner 3">
+    </div>
 
-    <!-- Webcam container -->
+    <button class="prev">&#10094;</button>
+    <button class="next">&#10095;</button>
+    <div class="dots"></div>
+  </section>
+
+  <!-- Hero / Age Detection -->
+  <section class="hero">
+    <h1>Welcome to Ageflix</h1>
+    <p>Discover movies according to your age group!</p>
+
     <div id="webcam-container"></div>
     <div id="label-container"></div>
 
     <button id="startBtn">Start Camera & Detect Age</button>
   </section>
 
-  <!-- TensorFlow & Teachable Machine -->
+  <!-- Static Images Section -->
+  <section class="static-images">
+    <img src="https://picsum.photos/id/1045/400/300" alt="Static 1">
+    <img src="https://picsum.photos/id/1049/400/300" alt="Static 2">
+    <img src="https://picsum.photos/id/1052/400/300" alt="Static 3">
+  </section>
+
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
   <script>
+    // Age Detection
     const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
     let model, webcam, maxPredictions;
 
@@ -173,44 +172,65 @@
 
       const best = prediction.reduce((a,b)=>a.probability>b.probability?a:b);
       if(best.probability>0.8){
-        let message = "";
-        let page = "";
-        if(best.className.toLowerCase()==="kids") { message="You are a Kid!"; page="kids.html"; }
-        else if(best.className.toLowerCase()==="adult") { message="You are an Adult!"; page="adult.html"; }
-        else if(best.className.toLowerCase()==="senior") { message="You are a Senior!"; page="senior.html"; }
-
-        // Play a small beep sound
-        const audio = new Audio('https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg');
-        audio.play();
-
-        alert(message);
-
-        // Fade out + zoom effect
-        document.body.style.transition = "opacity 1.5s, transform 1.5s";
-        document.body.style.opacity = 0;
-        document.body.style.transform = "scale(1.2)";
-        
-        setTimeout(()=>{ window.location.href = page; }, 1500);
+        if(best.className.toLowerCase()==="kids") window.location.href="kids.html";
+        if(best.className.toLowerCase()==="adult") window.location.href="adult.html";
+        if(best.className.toLowerCase()==="senior") window.location.href="senior.html";
       }
     }
 
     document.getElementById("startBtn").addEventListener("click", init);
+
+    // Banner Slider JS
+    const slides = document.querySelectorAll('.slide');
+    const prev = document.querySelector('.prev');
+    const next = document.querySelector('.next');
+    const dotsContainer = document.querySelector('.dots');
+    let slideIndex = 0;
+
+    function showSlide(index){
+      if(index < 0) slideIndex = slides.length-1;
+      else if(index >= slides.length) slideIndex = 0;
+      else slideIndex = index;
+
+      slides.forEach((s,i)=>{
+        s.classList.remove('active');
+        if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
+      });
+      slides[slideIndex].classList.add('active');
+      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
+    }
+
+    prev.addEventListener('click', ()=> showSlide(slideIndex-1));
+    next.addEventListener('click', ()=> showSlide(slideIndex+1));
+
+    // Dots
+    slides.forEach((_,i)=>{
+      const dot = document.createElement('span');
+      dot.classList.add('dot');
+      if(i===0) dot.classList.add('active');
+      dot.addEventListener('click', ()=>showSlide(i));
+      dotsContainer.appendChild(dot);
+    });
+
+    // Marquee / Moving Text
+    const marqueeTextElem = document.getElementById('marqueeText');
+    const marqueeMessages = [
+      "Ageflix recommends movies based on your age",
+      "Find the perfect movie for kids, adults, and seniors",
+      "Your personalized movie guide!",
+      "Discover films suitable for your age",
+      "Enjoy movies safely with Ageflix"
+    ];
+    let marqueeIndex = 0;
+
+    function updateMarquee(){
+      marqueeTextElem.innerText = marqueeMessages[marqueeIndex];
+      marqueeIndex = (marqueeIndex+1) % marqueeMessages.length;
+    }
+
+    setInterval(updateMarquee, 5000); // Change text every 5 seconds
+    updateMarquee();
   </script>
+
 </body>
 </html>
-```
-
----
-
-🔹 **مميزات الصفحة الآن**:
-
-* واجهة متجاوبة مع الجوال.
-* شعار Ageflix باللون الأحمر على اليمين.
-* قائمة بالمنتصف.
-* **News ticker** متحرك لعرض نصوص عن المشروع.
-* كاميرا تتعرف على العمر، يظهر alert، ثم fade out + zoom قبل الانتقال للصفحة المناسبة.
-* جاهزة لتعديل الصور لاحقًا أو إضافة المزيد من الجمل المتحركة في الـ ticker.
-
-إذا أحببت، أقدر أضيف لك **التحكم في النصوص المتغيرة عند الضغط على الزر** بحيث تتغير جملة من الجمل في الـ ticker تلقائيًا، ليصبح أكثر تفاعلية.
-
-هل تريد أن أفعل ذلك أيضًا؟
