--- a/indext.html
+++ b/indext.html
@@ -95,13 +95,13 @@
   <!-- Banner Slider -->
   <section class="banner-slider" id="bannerSlider">
     <div class="slide active">
-      <img src="https://picsum.photos/id/1018/1200/400" alt="Banner 1">
+      <img src="1.JPEG" alt="Banner 1">
     </div>
     <div class="slide">
-      <img src="https://picsum.photos/id/1025/1200/400" alt="Banner 2">
+      <img src="2.JPEG" alt="Banner 2">
     </div>
     <div class="slide">
-      <img src="https://picsum.photos/id/1039/1200/400" alt="Banner 3">
+      <img src="3.PNG" alt="Banner 3">
     </div>
 
     <button class="prev">&#10094;</button>
@@ -237,3 +237,4 @@
 
 </body>
 </html>
+
