--- a/indext.html
+++ b/indext.html
@@ -95,13 +95,13 @@
   <!-- Banner Slider -->
   <section class="banner-slider" id="bannerSlider">
     <div class="slide active">
-      <img src="1.JPEG" alt="Banner 1">
+      <img src="1.jpeg" alt="Banner 1">
     </div>
     <div class="slide">
       <img src="2.JPEG" alt="Banner 2">
     </div>
     <div class="slide">
-      <img src="3.PNG" alt="Banner 3">
+      <img src="3.png" alt="Banner 3">
     </div>
 
     <button class="prev">&#10094;</button>
@@ -237,4 +237,5 @@
 
 </body>
 </html>
+
 
